--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     const project = {
       Screens: [
         {
-          Name: "Screen",
+          Name: "Screen1",
           Width: 450,
           Height: 966,
           Background: "#FF8692E2",
